# routine-engine

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.PROPRIETARY  MANIFEST.in  QUICKSTART.md  README.md  __init__.py  actions.py  additional_integrations.py  advanced_nodes.py  api_routes.py  context_as_service.py  coordination_engine.py  copilot.py  credential_encryption.py  engine.py  event_bus.py  execution_engine.py  generic_http_connector.py  integration_nodes.py  integration_routes.py  main.py  meta_learning_engine.py  models.py  oauth_callbacks.py  optimizer.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  routes.py  scheduler.py  setup.py  storage.py  test_ucf_integration.py  webhooks.py  workflow_templates.py  zapier_import.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md
integrations/: __init__.py  airtable_connector.py  aws_connector.py  base.py  calendly_connector.py  discord_connector.py  generic_http_connector.py  google_cloud_connector.py  mailchimp_connector.py  notion_connector.py  sendgrid_connector.py  slack_connector.py  stripe_connector.py  twilio_connector.py
marketplace/: __init__.py  workflow_templates.py
oauth/: __init__.py  connection_manager.py
routine_engine/resilience/: __init__.py  durable_execution.py
tests/: conftest.py  test_routine_engine_components.py
versioning/: __init__.py  workflow_versioning.py
